Split out the PatientDto into sub enum dtos (race, ethnicity, living). Added patch method for updating a patient with a diagnosis. Removed placeholder controllers.
