# src/main/java/org/flinnfoundation/controller/PatientController.java
@@ -5,12 +5,15 @@ import io.swagger.model.EvaluationDto;
 import io.swagger.model.PatientDto;
 import lombok.extern.slf4j.Slf4j;
 import org.flinnfoundation.mapper.PatientMapper;
+import org.flinnfoundation.model.DiagnosisType;
+import org.flinnfoundation.model.DiagnosisType;
 import org.flinnfoundation.service.PatientService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
@@ -31,6 +34,13 @@ public class PatientController implements PatientsApi {
     @Override
     public ResponseEntity<List<PatientDto>> getPatients() {
         return new ResponseEntity<>(patientMapper.convertModelToApiDto(patientService.getPatients()), HttpStatus.OK);
+    }
+
+    @Override
+    public ResponseEntity<Void> updatePatientById(@PathVariable Long patientId, @RequestParam String diagnosis) {
+
+        patientService.updatePatientWithDiagnosis(patientId, DiagnosisType.valueOf(diagnosis));
+        return null;
     }
 
     @Override
