# src/main/java/org/flinnfoundation/model/PatientDiagnosis.java
@@ -1,15 +1,0 @@
-package org.flinnfoundation.model;
-
-import lombok.Data;
-
-import javax.persistence.Embeddable;
-
-@Data
-@Embeddable
-public class PatientDiagnosis {
-
-    private Diagnosis primaryDiagnosis;
-
-    private Diagnosis secondaryDiagnosis;
-
-}
